--- a/build.xml
+++ b/build.xml
@@ -30,7 +30,7 @@
   <target name="compile" depends="init"
         description="compile the source " >
     <!-- Compile the java code from ${src} into ${build} -->
-    <javac srcdir="${src}" destdir="${build}">
+    <javac includeantruntime="false" srcdir="${src}" destdir="${build}">
       <classpath refid="main-classpath"/>
     </javac>
   </target>
